crates/pmcp-code-mode-derive/tests/ui/missing_token_secret.stderr
error: #[derive(CodeMode)] requires field `token_secret` (type: TokenSecret).
       Required fields: code_mode_config, token_secret, policy_evaluator, code_executor
  --> tests/ui/missing_token_secret.rs:19:8
   |
19 | struct MissingTokenSecret {
   |        ^^^^^^^^^^^^^^^^^^
